# epidemic-hub

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
api/: .dockerignore  .gitignore  Dockerfile  docker-compose.dev.yml  manage.py  pyproject.toml  pytest.ini
api/commons/: timeutil.py
api/epidemic/: asgi.py  settings.py  urls.py  wsgi.py
api/tracks/: admin.py  models.py  serializers.py  urls.py  views.py
api/tracks/fixtures/: interview_data.json
api/tracks/migrations/: 0001_initial.py  0002_fetch_data.py
api/tracks/tests/: test_models.py  test_views.py
frontend/: .dockerignore  .gitignore  Dockerfile  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/api/: endpoints.ts  playlists.ts  tracks.ts  types.ts
frontend/src/commons/: modalutils.ts  objectutils.ts  timeutils.ts
frontend/src/components/AudioPlayer/: AudioPlayer.js  AudioPlayer.module.css
frontend/src/components/HomePanel/: HomePanel.tsx
frontend/src/components/PlaylistCreateModal/: PlaylistCreateModal.tsx
frontend/src/components/PlaylistTrackModal/: PlaylistTrackModal.tsx
frontend/src/components/PlaylistTracksTab/: PlaylistTracksTab.tsx
frontend/src/components/PlaylistsModal/: PlaylistsModal.tsx
frontend/src/components/PlaylistsTab/: PlaylistsTab.tsx
frontend/src/components/TracksModal/: TracksModal.tsx
frontend/src/components/TracksTab/: TracksTab.tsx
